force-app/main/default/objects/S_P_Vendor_Product_Threshold__c/S_P_Vendor_Product_Threshold__c.object-meta.xml
<CustomObject>
    <label>S&amp;P Vendor Product Threshold</label>
    <nameField>
        <displayFormat>SVPT # {000000000}</displayFormat>
        <label>S&amp;P Vendor Product Threshold ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S&amp;P Vendor Product Threshold</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>