force-app/main/default/objects/S_P_Vendor_Product_Threshold__c/fields/Agreement_Level__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Level__c</fullName>
    <label>Agreement Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>