force-app/main/default/objects/S_P_Vendor_Product_Threshold__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>