force-app/main/default/objects/S_P_Vendor_Product_Threshold__c/fields/Minimum_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Revenue__c</fullName>
    <label>Minimum Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>