force-app/main/default/objects/S_P_Vendor_Product_Threshold__c/fields/Threshold_Required__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Threshold Required</label>
    <type>Checkbox</type>
</CustomField>