force-app/main/default/objects/S_P_Vendor_Product_Threshold__c/validationRules/Level_is_Empty_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Level_is_Empty_VR</fullName>
    <active>true</active>
    <description>Level field must be specified.</description>
    <errorConditionFormula>ISPICKVAL(Level__c , &apos;&apos;)</errorConditionFormula>
    <errorMessage>If Level is empty, Level field must be specified.</errorMessage>
</ValidationRule>