force-app/main/default/objects/S_P_Vendor_Product_Threshold__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Percentage__c</columns>
    <columns>Minimum_Revenue__c</columns>
    <columns>Threshold_Required__c</columns>
    <columns>Level__c</columns>
    <columns>Agreement_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>